--- a/css/style.css
+++ b/css/style.css
@@ -69,33 +69,20 @@ header {
 }
 
 main > section {
-    padding-top: 52px;
+    padding-top: 0px;
     margin: 0px;
 }
 
 
 /*colori section*/
 
-
-.bg-white {
-    background-color: white;
-}
-
-.bg-grey {
-    background-color: gray;
-}
-
-.bg-black {
-    background-color: black;
-}
-
-
 .container-3 {
-    height: 500px;
+    height: 600px;
     width: 1826px;
     background-color:white;
     display: flex;
     justify-content: center;
+    padding: 51px;
 }
 
 
@@ -116,6 +103,63 @@ main > section {
     border: 2px dotted black;
 }
 
-.gray{
+.gray {
     background-color: gray;
+}
+
+.green-container {
+    height: 900px;
+    width: 1200px;
+    background-color: #228b22;
+    border: 2px dotted black;
+}
+
+
+
+.container-4 {
+    height: 1000px;
+    width: 1826px;
+    background-color:gray;
+    display: flex;
+    justify-content: center;
+    padding: 51px;
+}
+
+
+.container-5 {
+    display: flex;
+    background-color: #23272a;
+    height: 1000px;
+    width: 1826px;
+}
+
+.container-6 {
+    height: 630x;
+    width: 1826px;
+    background-color: #23272a;
+    display: flex;
+    justify-content: center;
+    padding: 16px;
+}
+
+.container-7 {
+    height: 575px;
+    width: 360px;
+    background-color: #f08080;
+    border: 2px dotted black;
+    display: flex;
+   
+}
+
+.container-8 {
+    height: 575px;
+    width: 840px;
+    background-color: #20b2aa;
+    border: 2px dotted black;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.item-container-8 {
+    border: 2px dotted white;
 }
