--- a/css/style.css
+++ b/css/style.css
@@ -163,3 +163,36 @@ main > section {
 .item-container-8 {
     border: 2px dotted white;
 }
+
+footer {
+    background-color: #23272a;
+    height: 105px;
+    width: 1826px;
+    margin-top: -15px;
+    display: flex;
+    justify-content: center;
+}
+
+.container-footer {
+    display: flex;
+    background-color: #7fffd4;
+    height: 72px;
+    width: 1201px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.bottone-logo {
+    height: 35px;
+    width: 95px;
+    border: 2px dotted black;
+}
+
+
+
+
+.bottone {
+    height: 35px;
+    width: 95px;
+    border: 2px dotted black;
+}
