--- a/css/style.css
+++ b/css/style.css
@@ -68,12 +68,6 @@ header {
     display: flex;
 }
 
-main > section {
-    padding-top: 0px;
-    margin: 0px;
-}
-
-
 /*colori section*/
 
 .container-3 {
@@ -86,7 +80,7 @@ main > section {
 }
 
 
-.debug main section .row {
+.debug main div .row {
     height: 500px;
     width: 718px;
     background-color: #1e90ff;
@@ -168,7 +162,7 @@ footer {
     background-color: #23272a;
     height: 105px;
     width: 1826px;
-    margin-top: -15px;
+    margin-top: -17px;
     display: flex;
     justify-content: center;
 }
@@ -183,8 +177,7 @@ footer {
 }
 
 .bottone-logo {
-    height: 35px;
-    width: 95px;
+    padding: 6px;
     border: 2px dotted black;
 }
 
@@ -192,7 +185,6 @@ footer {
 
 
 .bottone {
-    height: 35px;
-    width: 95px;
+    padding: 6px;
     border: 2px dotted black;
 }
