--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,10 @@ header {
 }
 
 .container-flex {
-    background-color: #daa520;
     display: flex;
     justify-content: center;
     width: 1200px;
-    height: 45px;
+    height: 56px;
     justify-content: space-between;
     align-items: center;
 }
@@ -30,7 +29,7 @@ header {
     background-color: #daa520;  
     border: 2px dotted black;
     width: 240px; 
-    padding: 12px;
+    padding: 7px;
 }
 
 
@@ -38,7 +37,7 @@ header {
     background-color: #daa520;  
     border: 2px dotted black;
     flex-grow: 1;
-    padding: 12px;
+    padding: 7px;
     text-align: center;
 }
 
@@ -47,7 +46,8 @@ header {
     background-color: #daa520;  
     border: 2px dotted black;
     width: 240px;
-    padding: 12px;
+    padding: 7px;
+    text-align: right;
 }
 
 
