feat: sistemato margine footer

--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,7 @@ footer {
     width: 1201px;
     justify-content: space-between;
     align-items: center;
+    margin-top: 35px;
 }
 
 .bottone-logo {
